# WebAPI-C-CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TootegaWebAPI.sln  TootegaWebAPI.vcxproj  TootegaWebAPI.vcxproj.filters  build-all.ps1  build-windows.ps1
docker/: Dockerfile.linux  docker-compose.build.yml
src/: main.cpp
src/api/: auth_controller.cpp  auth_controller.h  browser_controller.cpp  browser_controller.h  browseroso_controller.cpp  browseroso_controller.h  docs_controller.cpp  docs_controller.h  static_controller.cpp  static_controller.h  version_controller.cpp  version_controller.h
src/core/: jwt.cpp  jwt.h  server.cpp  server.h  system_info.cpp  system_info.h
src/data/: connection_manager.cpp  connection_manager.h  database.cpp  database.h
web/css/: reset.css
web/css/pages/: browseroso.css
web/js/pages/: browser.js.map  login.js
web/ts/: common.ts
web/ts/pages/: browser.ts
